@@ -58,6 +58,7 @@
 37. For Qt4 linux builds, use system QJson if found.
 38. Remove amazon cover fetching - required API key that Cantata never really
     had.
+39. Add debug logging. Please see README for details.
 
 1.0.3
 -----
